fix edit task dialog gaps/font

--- a/src/app/login/main-page/board/task-preview/dialog-show-edit-task/dialog-edit-task.scss
+++ b/src/app/login/main-page/board/task-preview/dialog-show-edit-task/dialog-edit-task.scss
@@ -6,7 +6,6 @@
   position: relative;
   padding: 40px;
   padding-right: 25px;
-  gap: 24px;
   width: 525px;
   max-height: 800px;
 
@@ -66,10 +65,12 @@
     flex-direction: column;
     gap: 8px;
 
+    input[type="date"] {
+      font-family: 'Inter', sans-serif;
+    }
+
     label {
-      font-weight: 400;
-      font-size: 16px;
-      color: colors.$black;
+      font-size: 20px;
       margin-top: 30px;
     }
 
@@ -94,9 +95,8 @@
     gap: 8px;
 
     label {
-      font-weight: 400;
-      font-size: 16px;
-      color: colors.$black;
+      font-size: 20px;
+      margin-top: 30px;
     }
 
     .prio_buttons {
@@ -162,50 +162,55 @@
     }
   }
 
-  .area_assigned {
-    width: 100%;
+  .assigned {
 
-    mat-option.mat-selected .mat-pseudo-checkbox {
-      border-color: colors.$white;
+    label {
+      font-size: 20px;
     }
+    
+    .area_assigned {
+      width: 100%;
 
-    mat-option.mat-selected .mat-pseudo-checkbox::after {
-      border-color: colors.$white;
-    }
-
-    @media (max-width: 420px) {
-      .mat-mdc-form-field mat-label {
-        font-size: 12px;
+      mat-option.mat-selected .mat-pseudo-checkbox {
+        border-color: colors.$white;
       }
-    }
 
-    .assigned_logos {
-      display: flex;
-      gap: 8px;
-      margin-top: 8px;
-      flex-wrap: wrap;
-      color: #f0f0f0;
-    }
+      mat-option.mat-selected .mat-pseudo-checkbox::after {
+        border-color: colors.$white;
+      }
 
-    .sc_logo {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-weight: 500;
-      font-size: 14px;
-      color: #fff;
+      @media (max-width: 420px) {
+        .mat-mdc-form-field mat-label {
+          font-size: 12px;
+        }
+      }
+
+      .assigned_logos {
+        display: flex;
+        gap: 8px;
+        margin-top: 8px;
+        flex-wrap: wrap;
+        color: #f0f0f0;
+      }
+
+      .sc_logo {
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-weight: 500;
+        font-size: 14px;
+        color: #fff;
+      }
     }
   }
 
   .subtasks {
-    .area_input {
-      display: flex;
-      flex: 1;
-      gap: 8px;
-      align-items: center;
+
+    label {
+      font-size: 20px;
     }
 
     .subtask_input_wrapper {
